# pytho_rich_demo

./: a.py  c.py  pyproject.toml  tempCodeRunnerFile.py
src/uv_x86_64_pc_windows_msvc/: __init__.py
