[project]
name = "uv-x86-64-pc-windows-msvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "can>=0.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"